# rocket-rest-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.cargo/: config
migrations/2021-09-06-200448_users/: up.sql
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs  server.rs
src/users/: routes.rs
