[package]
name = "rocket-rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_codegen = "0.5.0-rc.2"
diesel = { version = "1.4.8", features = ["postgres"] }
serde = "1.0.138"
serde_derive = "1.0.138"
serde_json = "1.0.82"
sodiumoxide = "0.2.7"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_postgres_pool"]
